--- a/EntertainmentToRememberV2/EntertainmentToRememberV2/Pages/SearchShowPage.xaml
+++ b/EntertainmentToRememberV2/EntertainmentToRememberV2/Pages/SearchShowPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="EntertainmentToRememberV2.Pages.AddShowPage"
+﻿<Page x:Class="EntertainmentToRememberV2.Pages.SearchShowPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,18 +6,20 @@
       xmlns:local="clr-namespace:EntertainmentToRememberV2.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="800"
-      Title="AddShowPage">
+      Title="SearchShowPage">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
@@ -35,33 +37,25 @@
             <Style TargetType="Button">
                 <Setter Property="Margin" Value="10"/>
                 <Setter Property="Height" Value="40"/>
+                <Setter Property="Width" Value="100"/>
                 <Setter Property="FontFamily" Value="Bradley Hand ITC"/>
                 <Setter Property="FontWeight" Value="ExtraBold"/>
                 <Setter Property="FontStyle" Value="Oblique"/>
                 <Setter Property="Foreground" Value="DarkBlue"/>
                 <Setter Property="Background" Value="Beige"/>
-                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontSize" Value="14"/>
             </Style>
         </Grid.Resources>
         <Grid.Background>
             <ImageBrush Stretch="Fill" ImageSource="..\Images\backgroundHome4.jpg" AlignmentX="Center" AlignmentY="Top"/>
         </Grid.Background>
-        <Label x:Name="lblName" Content="Name" Grid.Row="0" Grid.Column="0"></Label>
-        <Label x:Name="lblCast" Content="Star Cast" Grid.Row="1" Grid.Column="0"></Label>
-        <Label x:Name="lblGenre" Content="Genre" Grid.Row="2" Grid.Column="0"></Label>
-        <Label x:Name="lblRating" Content="Rate The Show" Grid.Row="3" Grid.Column="0"></Label>
-        <Label x:Name="lblSuccessMsg" Content="" Grid.Row="4" Grid.Column="0" Width="200"/>
-        <Button x:Name="btnAdd" Content="Click for imortality" Grid.Row="4" Grid.Column="1" Width="180" Click="btnAdd_Click"/>
-        <Button x:Name="btnSearch" Content="Search" Grid.Row="5" Grid.Column="1" Width="150" Click="btnSearch_Click"/>
-        <Button x:Name="btnHome" Content="Home" Grid.Row="5" Grid.Column="0" Width="150" Click="btnHome_Click"/>
-
-        <TextBox x:Name="txtName" Grid.Row="0" Grid.Column="1" Margin="10" Height="40" Width="250" 
-                 GotFocus="txtName_GotFocus">
-
-        </TextBox>
-        <TextBox x:Name="txtCast" Grid.Row="1" Grid.Column="1" Margin="10" Height="40" Width="250"/>
-        <ComboBox x:Name="cmbGenre" Grid.Row="2" Grid.Column="1" Margin="10" Height="40" Width="250" FontFamily="Bradley Hand ITC" FontSize="16" FontStyle="Oblique">
-            <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center" IsSelected="True">Choose Show Genre</ComboBoxItem>
+        <Label x:Name="lblInfo" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Width="Auto" Content="Search by name, cast, genre or rating.." Foreground="Beige" FontSize="16"/>
+        <Label x:Name="lblName" Content="Name" Grid.Row="1" Grid.Column="0"></Label>
+        <Label x:Name="lblCast" Content="Star Cast" Grid.Row="2" Grid.Column="0"></Label>
+        <Label x:Name="lblGenre" Content="Genre" Grid.Row="3" Grid.Column="0"></Label>
+        <TextBox x:Name="txtName" Grid.Row="1" Grid.Column="1" Margin="10" Height="40" Width="250"/>
+        <TextBox x:Name="txtCast" Grid.Row="2" Grid.Column="1" Margin="10" Height="40" Width="250"/>
+        <ComboBox x:Name="cmbGenre" Grid.Row="3" Grid.Column="1" Margin="10" Height="40" Width="150" FontFamily="Bradley Hand ITC" FontSize="16" FontStyle="Oblique">
             <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">Action</ComboBoxItem>
             <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">Drama</ComboBoxItem>
             <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">Thriller</ComboBoxItem>
@@ -70,14 +64,18 @@
             <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">Sitcom</ComboBoxItem>
             <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">Sci-Fi</ComboBoxItem>
         </ComboBox>
-        <ComboBox x:Name="cmbRating" Grid.Row="3" Grid.Column="1" Margin="10" Height="40" Width="50" FontFamily="Bradley Hand ITC" FontSize="16" FontStyle="Oblique">
-            <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center" IsSelected="True">1</ComboBoxItem>
-            <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">2</ComboBoxItem>
-            <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">3</ComboBoxItem>
-            <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">4</ComboBoxItem>
-            <ComboBoxItem Foreground="DarkBlue" FontFamily="Bradley Hand ITC" FontSize="14" FontStyle="Oblique" HorizontalAlignment="Center">5</ComboBoxItem>
-        </ComboBox>
-
-
+        <Button x:Name="btnSearch" Grid.Row="4" Grid.Column="0"  Content="Search" Click="btnSearch_Click"/>
+        <Button x:Name="btnHome" Grid.Row="4" Grid.Column="1"  Content="Home" Click="btnHome_Click"/>
+        <DataGrid x:Name="grdDisplayShows"
+                  Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3"
+                  Grid.RowSpan="4" Margin="20" AutoGenerateColumns="False" FontWeight="ExtraBold"
+                  FontFamily="Bradley Hand ITC" Foreground="DarkBlue" FontSize="16" Background="Transparent" BorderBrush="Transparent">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" FontWeight="ExtraBold"/>
+                <DataGridTextColumn Header="Cast" Binding="{Binding Cast}" Width="*" FontWeight="ExtraBold"/>
+                <DataGridTextColumn Header="Genre" Binding="{Binding Genre}" Width="*" FontWeight="ExtraBold"/>
+                <DataGridTextColumn Header="Rating" Binding="{Binding Rating}" Width="*" FontWeight="ExtraBold"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Page>
